<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/witdth_et"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_string"
        android:textSize="@dimen/title_ts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/name"
        android:layout_width="@dimen/witdth_et"
        android:layout_height="@dimen/height_et"
        android:layout_marginStart="@dimen/margins_et"
        android:layout_marginEnd="@dimen/margins_et"
        android:inputType="text"
        android:hint="@string/string_et1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <EditText
        android:id="@+id/age"
        android:layout_width="@dimen/witdth_et"
        android:layout_height="@dimen/height_et"
        android:layout_marginStart="@dimen/margins_et"
        android:layout_marginTop="@dimen/margins_et"
        android:layout_marginEnd="@dimen/margins_et"
        android:hint="@string/string_et2"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />
    <EditText
        android:id="@+id/salary"
        android:layout_width="@dimen/witdth_et"
        android:layout_height="@dimen/height_et"
        android:layout_marginStart="@dimen/margins_et"
        android:layout_marginTop="@dimen/margins_et"
        android:layout_marginEnd="@dimen/margins_et"
        android:inputType="number"
        android:hint="@string/string_et3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margins_et"
        android:text="@string/btn_string"
        android:textSize="@dimen/btn_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />

    <Button
        android:id="@+id/employee_list"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margins_et"
        android:text="@string/btn2_string"
        android:textSize="@dimen/btn_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.726" />


</androidx.constraintlayout.widget.ConstraintLayout>